# Partix

./: CMakeLists.txt  README.md
cmake/: glad.cmake  glfw.cmake  stb.cmake  tinyxml2.cmake
example/: StarRain.xml
example/SlashStorm/: SM_Slash_1.FBX  SlashStorm.xml
example/Sprite/: Sprite.xml
examples/: Fountain.xml  Sprite.xml  StarRain.xml  Template.xml
examples/Fountain/: Fountain.xml
examples/SlashStorm/: SlashStorm.xml
src/App/: Fountain.cpp  PartixRenderer.cpp  Sprite.cpp  StarRain.cpp
src/Attrix/: DefaultEmitterDeserializer.cpp  EmitterFactory.cpp  EmitterFactory.h  ParticleFactory.cpp  ParticleFactory.h
src/Attrix/Emitter/: Fountain.cpp  Rain.cpp
src/Attrix/Particle/: ParticleDefines.h  Slash.cpp  TestParticle.cpp
src/Emittribute/: DefaultEmitterDeserializer.cpp  DefaultEmitterDeserializer.h  EmitterFactory.cpp
src/Emittribute/Attributes/: Fountain.cpp  Rain.cpp
src/Example/: StarRain.cpp  fountain.cpp  rain.cpp
src/Partix/: Attribute.h  Bindings.h  Component.h  DataBuildContext.h  Emitter.cpp  Emitter.h  EmitterSpawnComponent.cpp  EmitterSpawnComponent.h  Frame.h  Mesh.cpp  Mesh.h  Particle.h  ParticleBuffer.h  PartixEngine.cpp  PartixEngine.h  Shader.cpp  Shader.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  UniformBuffer.h  View.h
src/Partix/Script/: PreprocessShader.sh
src/Partix/Scripts/: PreprocessShader.ps1  PreprocessShader.sh
src/Partix/Shader/: InitRotation.glsl  constants.glsl  fountain.comp  mesh.vert  particle.vert  particle_common.glsl  rain.comp  random.glsl  slash.frag  sprite.comp  star.frag  storm.comp  sword.comp  template.glsl  utils.glsl  view.glsl  water.frag
src/Partix/Shader/Math/: quaternion.glsl  rotation.glsl
src/Partix/Shader/Module/: EmitterSpawn.glsl  RandomRotation.glsl
src/Partix/Shaders/: EmitterSpawn.glsl  EmitterSpawn.incl  circle.frag  common.incl  fountain.comp  math.glsl  math.incl  mesh.vert  particle.comp  particle.frag  particle.geom  particle.vert  particle_common.glsl  particle_common.incl  rain.comp  rain.vert  random.glsl  random.incl  shader.glsl  shader.incl  slash.frag  sprite.comp  star.frag  star_rain.comp  template.incl  test.vert  utils.incl  water.frag
src/Partix/Shaders/common/: common.frag  common.vert
src/Renderer/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h
src/Renderer/Shader/: screen.vert  tonemap.frag
